--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,5 +1,7 @@
 <h2>Users</h2>
-<button [disabled]="!enableAdd" class="btn btn-block mb-3">Add New User</button>
+<!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
+<button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd"
+  class="btn btn-block mb-3">Add New User</button>
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
   <!-- ;else noUsers -->
   <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
