--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -8,9 +8,11 @@
     <h2>
       {{user.firstName}}
       {{user.lastName}}
+      <small *ngIf='user.age && user.address'><button (click)="toggleHide(user)" class="btn btn-dark btn-sm"><i
+            [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'"></i></button></small>
     </h2>
 
-    <ul class="list-group" *ngIf='showExtended && user.age && user.address'>
+    <ul class="list-group" *ngIf='!user.hide && user.age && user.address'>
       <li class="list-group-item">age : {{user.age}}</li>
       <li class="list-group-item">Address: {{user.address.street}} {{user.address.city}}, {{user.address.state}}
       </li>
