--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,9 +1,49 @@
-<h2>Users</h2>
-<!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
-<button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd"
-  class="btn btn-block mb-3">Add New User</button>
+<button (click)="showUserForm = ! showUserForm" class="btn btn-dark mb-3">Add User</button>
+
+<div class="card card-body mb-3" *ngIf="showUserForm">
+  test
+  <form (submit)="onSubmit($event)" action="">
+    <div class="form-group">
+      <label for="">First Name</label>
+      <!-- keydown :: keyup :: keypress :: focus :: blur :: cut :: paste :: copy -->
+      <input (keydown)="fireEvent($event)" type="text" id="text" class="form-control" name="firstName">
+    </div>
+
+    <div class="form-group">
+      <label>Last Name</label>
+      <input type="text" class="form-control" name="lastName">
+    </div>
+
+    <div class="form-group">
+      <label>Age</label>
+      <input type="number" class="form-control" name="age">
+    </div>
+
+    <div class="form-group">
+      <label>Street Address</label>
+      <input type="text" class="form-control" name="street">
+    </div>
+
+    <div class="form-group">
+      <label>City</label>
+      <input type="text" class="form-control" name="city">
+    </div>
+
+    <div class="form-group">
+      <label>State</label>
+      <input type="text" class="form-control" name="state">
+    </div>
+
+
+
+    <!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
+    <button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd"
+      class="btn btn-block mb-3">Add New User</button>
+  </form>
+</div>
+
+
 <ul class="list-unstyled" *ngIf="loaded && users?.length > 0">
-  <!-- ;else noUsers -->
   <li class="card card-body mb-2" *ngFor="let user of users" [class.bg-light]="user.isActive">
     <h2>
       {{user.firstName}}
