--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -5,40 +5,39 @@
   <form (submit)="onSubmit($event)" action="">
     <div class="form-group">
       <label for="">First Name</label>
-      <!-- keydown :: keyup :: keypress :: focus :: blur :: cut :: paste :: copy -->
-      <input (keydown)="fireEvent($event)" type="text" id="text" class="form-control" name="firstName">
+      <!-- keydown :: keyup :: keypress :: focus :: blur :: cut :: paste :: copy ==> (keydown)="fireEvent($event)"-->
+      <input type="text" [(ngModel)]="user.firstName" id="text" class="form-control" name="firstName">
     </div>
-
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text" class="form-control" name="lastName">
+      <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName">
     </div>
 
     <div class="form-group">
       <label>Age</label>
-      <input type="number" class="form-control" name="age">
+      <input type="number" [(ngModel)]="user.age" class="form-control" name="age">
     </div>
 
     <div class="form-group">
       <label>Street Address</label>
-      <input type="text" class="form-control" name="street">
+      <input type="text" [(ngModel)]="user.address.street" class="form-control" name="street">
     </div>
 
     <div class="form-group">
       <label>City</label>
-      <input type="text" class="form-control" name="city">
+      <input type="text" [(ngModel)]="user.address.city" class="form-control" name="city">
     </div>
 
     <div class="form-group">
       <label>State</label>
-      <input type="text" class="form-control" name="state">
+      <input type="text" [(ngModel)]="user.address.state" class="form-control" name="state">
     </div>
 
 
 
     <!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
-    <button (click)="addUser({firstName: 'Mary', lastName: 'Williams', isActive: true})" [disabled]="!enableAdd"
-      class="btn btn-block mb-3">Add New User</button>
+    <button (click)="addUser()" [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add
+      New User</button>
   </form>
 </div>
 
