--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,7 +1,6 @@
 <button (click)="showUserForm = ! showUserForm" class="btn btn-dark mb-3">Add User</button>
 
 <div class="card card-body mb-3" *ngIf="showUserForm">
-  test
   <form (submit)="onSubmit($event)" action="">
     <div class="form-group">
       <label for="">First Name</label>
@@ -11,6 +10,11 @@
     <div class="form-group">
       <label>Last Name</label>
       <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName">
+    </div>
+
+    <div class="form-group">
+      <label>Email</label>
+      <input type="text" [(ngModel)]="user.email" class="form-control" name="email">
     </div>
 
     <div class="form-group">
@@ -36,7 +40,7 @@
 
 
     <!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
-    <button (click)="addUser()" [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add
+    <button [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add
       New User</button>
   </form>
 </div>
@@ -52,6 +56,7 @@
     </h2>
 
     <ul class="list-group" *ngIf='!user.hide && user.age && user.address'>
+      <li class="list-group-item">Email : {{user.email}}</li>
       <li class="list-group-item">age : {{user.age}}</li>
       <li class="list-group-item">Address: {{user.address.street}} {{user.address.city}}, {{user.address.state}}
       </li>
