--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,46 +1,49 @@
 <button (click)="showUserForm = ! showUserForm" class="btn btn-dark mb-3">Add User</button>
 
 <div class="card card-body mb-3" *ngIf="showUserForm">
-  <form (submit)="onSubmit($event)" action="">
+  <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)" action="">
     <div class="form-group">
       <label for="">First Name</label>
-      <!-- keydown :: keyup :: keypress :: focus :: blur :: cut :: paste :: copy ==> (keydown)="fireEvent($event)"-->
-      <input type="text" [(ngModel)]="user.firstName" id="text" class="form-control" name="firstName">
+      <input type="text" [(ngModel)]="user.firstName"
+        [ngClass]="{'is-invalid': userFirstName.errors && userFirstName.touched}" class="form-control is-invalid"
+        name="firstName" #userFirstName="ngModel" required minlength="2">
+      <div [hidden]="!userFirstName.errors?.required" class="invalid-feedback">
+        First name required
+      </div>
+
+      <div [hidden]="!userFirstName.errors?.minlength" class="invalid-feedback">
+        Must be at least 2 characters
+      </div>
     </div>
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text" [(ngModel)]="user.lastName" class="form-control" name="lastName">
+      <input type="text" [(ngModel)]="user.lastName"
+        [ngClass]="{'is-invalid': userLastName.errors && userLastName.touched}" class="form-control is-invalid"
+        name="lastName" #userLastName="ngModel" required minlength="2">
+      <div [hidden]="!userLastName.errors?.required" class="invalid-feedback">
+        Last name required
+      </div>
+
+      <div [hidden]="!userLastName.errors?.minlength" class="invalid-feedback">
+        Must be at least 2 characters
+      </div>
     </div>
 
     <div class="form-group">
       <label>Email</label>
-      <input type="text" [(ngModel)]="user.email" class="form-control" name="email">
+      <input type="email" [(ngModel)]="user.email" [ngClass]="{'is-invalid': userEmail.errors && userEmail.touched}"
+        class="form-control is-invalid" name="email" #userEmail="ngModel" required
+        pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?">
+      <div [hidden]="!userEmail.errors?.required" class="invalid-feedback">
+        Email required
+      </div>
+
+      <div [hidden]="!userEmail.errors?.pattern" class="invalid-feedback">
+        Email is not valid
+      </div>
     </div>
 
-    <div class="form-group">
-      <label>Age</label>
-      <input type="number" [(ngModel)]="user.age" class="form-control" name="age">
-    </div>
-
-    <div class="form-group">
-      <label>Street Address</label>
-      <input type="text" [(ngModel)]="user.address.street" class="form-control" name="street">
-    </div>
-
-    <div class="form-group">
-      <label>City</label>
-      <input type="text" [(ngModel)]="user.address.city" class="form-control" name="city">
-    </div>
-
-    <div class="form-group">
-      <label>State</label>
-      <input type="text" [(ngModel)]="user.address.state" class="form-control" name="state">
-    </div>
-
-
-
-    <!-- click :: mouseover :: mouseout :: mousedown :: mouseup :: dbclick :: drag :: dragover-->
-    <button [disabled]="user.firstName == '' || user.lastName == ''" class="btn btn-block mb-3">Add
+    <button [disabled]="!userForm.form.valid" class="btn btn-block mb-3">Add
       New User</button>
   </form>
 </div>
