Input & Edit State

--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -4,12 +4,15 @@
   <form action="">
     <div class="form-group">
       <label for="">Title</label>
-      <input type="text" class="form-control" name="title" #title>
+      <input type="text" class="form-control" [(ngModel)]="currentPost.title" name="title" #title>
     </div>
     <div class="form-group">
       <label for="">Body</label>
-      <input type="text" class="form-control" name="body" #body>
+      <input type="text" class="form-control" [(ngModel)]="currentPost.body" name="body" #body>
     </div>
-    <button (click)="addPost(title.value, body.value)" class="btn btn-dark btn-block">Add Post</button>
+    <input type="hidden" name="id" [(ngModel)]="currentPost.id">
+    <button *ngIf="!isEdit" (click)="addPost(title.value, body.value)" class="btn btn-dark btn-block">Add Post</button>
+    <button *ngIf="isEdit" (click)="UpdatePost()" class="btn btn-warning btn-block">Update
+      Post</button>
   </form>
 </div>
