--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,4 +1,4 @@
-<app-post-form (newPost)="onNewPost($event)"></app-post-form>
+<app-post-form [isEdit]="isEdit" [currentPost]="currentPost" (newPost)="onNewPost($event)"></app-post-form>
 
 <h2>Posts</h2>
 
@@ -6,5 +6,8 @@
   <div class="card-body">
     <h3>{{post.title}}</h3>
     <p>{{post.body}}</p>
+    <hr>
+    <button class="btn btn-danger"><i class="fa fa-remove"></i></button>
+    <button (click)="editPost(post)" class="btn btn-light"><i class="fa fa-pencil"></i></button>
   </div>
 </div>
