Creating & Mapping Routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<!-- <router-outlet></router-outlet> -->
-
 <app-navbar></app-navbar>
 
 <div class="container">
-  <!-- <app-users></app-users> -->
+  <router-outlet></router-outlet>
 
-  <app-posts></app-posts>
+  <!-- <app-users></app-users> -->
+  <!-- <app-posts></app-posts> -->
 </div>
